<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:id="@+id/imageButton3"/>

    <ImageView
            android:layout_width="310dp"
            android:layout_height="262dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:id="@+id/imageView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView8"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginTop="8dp"
            android:text="@string/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:id="@+id/textView3"/>
    <TextView
            android:text="@string/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:id="@+id/textView4"/>
    <TextView
            android:text="@string/ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:id="@+id/textView5"/>
    <TextView
            android:text="@string/recipe_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            android:id="@+id/textView6"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editIngredients"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"/>
    <androidx.appcompat.widget.AppCompatSpinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/textView6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView6"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textSize="6dp"
            android:id="@+id/editName"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"/>
    <EditText
            android:layout_width="60dp"
            android:layout_height="32dp"
            android:inputType="textPersonName"
            android:textSize="6dp"
            android:ems="10"
            android:id="@+id/editTime"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editIngredients"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="@+id/imageView" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"/>
    <TextView
            android:text="@string/tv_time_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTime"
            app:layout_constraintStart_toEndOf="@+id/editTime" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/btn_text_next_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNextCreateMain"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>