<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="4dp" android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" android:id="@+id/imageButton3"/>

    <ImageView
            android:layout_width="334dp"
            android:layout_height="311dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:id="@+id/imageView"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView9"/>
    <TextView
            android:text="@string/text_view_step"
            android:layout_width="100dp"
            android:layout_height="45dp"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            android:id="@+id/tvStepCount"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:id="@+id/editText"
            android:hint="@string/edit_text_hint_step"
            app:layout_constraintTop_toBottomOf="@+id/tvStepCount" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:id="@+id/btnBack"
            android:text="@string/btn_text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"/>
    <Button
            android:text="@string/btn_text_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="@+id/editText" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>